# TraceFaith

./: README.md  environment.yml  pyproject.toml
Presentations/: 13 May 2026 Causal Faithfulness Paper Sharing.pptx  6 May 2026 ai4s_causal_faithfulness_paper_sharing.pptx
aria/: __init__.py  dataset_plan.py  hf_models.py  interventions.py  io.py  loaders.py  metrics.py  parsing.py  pipeline.py  prompts.py  schemas.py
configs/: pilot_scienceqa.yaml  tracefaith_mixed_20q.yaml
experiments/: benchmark_model_speed.py  prepare_tracefaith_dataset_plan.py  run_faithfulness_evaluation.py  run_tracefaith_judge_baselines.py  run_tracefaith_mixed.py  run_tracefaith_modality_extension.py  run_tracefaith_retargeted_support.py
notebooks/: faithfulness_evaluation_showcase.ipynb
tests/: test_dataset_plan.py  test_faithfulness_pipeline.py  test_interventions.py  test_loaders.py  test_metrics.py  test_parsing_and_artifacts.py
